added current projects endpoint
